update FE small fix on quote display email - wrap jobs load in useEffect

--- a/client/src/components/job/quote/QuoteCard.module.css
+++ b/client/src/components/job/quote/QuoteCard.module.css
@@ -26,7 +26,15 @@
     display: flex;
     gap: 10px;
     align-items: center;
+}
 
+.profileDetails {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.username {
     font-size: 2em;
 }
 
@@ -38,10 +46,6 @@
 
 .property {
     font-family: 'Courier New', Courier, monospace;
-}
-
-.data {
-    font-size: 1em;
 }
 
 .img {
